fixed page overlaps

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,6 @@
 }
 @layer utilities {
   .h-custom-max-height {
-    height: 25vh;
+    height: 165px;
   }
 }
